--- a/www/home.html
+++ b/www/home.html
@@ -762,8 +762,8 @@
         <div class="screen__content">
           <div class="screen__container container">
             <div class="screen__content-in">
-              <div class="screen__title">НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ</div>
-              <div class="screen__text">Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.</div>
+              <h1 class="screen__title">НОВЫЙ ИНСТРУМЕНТ ПОСТРОЕНИЯ КОММУНИКАЦИЙ С ПОТРЕБИТЕЛЕМ</h1>
+              <p class="screen__text">Разрабатываем практичные решения, которые соответствуют целям наших клиентов, развивают городскую среду и увеличивают ценность проекта.</p>
               <div class="screen__btn-wrap">
                 <a class="btn btn_default screen__btn js-chat-init" href="#!">
                   <span class="btn__text">Начать чат с ботом</span>
@@ -909,8 +909,8 @@
           <path id="path-how-6" d="M57.080,106.431 C143.768,78.887 167.116,-9.028 299.453,0.756 C442.448,11.325 454.420,172.418 427.577,247.408 C388.906,355.439 196.964,394.817 86.711,321.656 C-23.544,248.488 -23.202,131.941 57.080,106.431 Z"></path>
         </svg>
         <div class="how__container container">
-          <div class="how__title">Как это работает</div>
-          <div class="how__text">Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:</div>
+          <h2 class="how__title">Как это работает</h2>
+          <p class="how__text">Любая продажа строится на коммуникациях с клиентом, будь то знакомство с продуктом, представление новых функций или поддержка. Мы выводим процесс коммуникаций с клиентом инновационный уровень, разрабатвая боты под популярные/следующие платформы:</p>
           <div
             class="how__soc">
             <div class="how__soc-icon-wrap">
@@ -971,8 +971,8 @@
               </svg>
             </div>
             <div class="how__history-content">
-              <div class="how__history-title">Идея бота</div>
-              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+              <h3 class="how__history-title">Идея бота</h3>
+              <p class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</p>
             </div>
           </div>
           <div class="how__history-el how__history-el_2">
@@ -983,8 +983,8 @@
               </svg>
             </div>
             <div class="how__history-content">
-              <div class="how__history-title">Сценарий разработки</div>
-              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+              <h3 class="how__history-title">Сценарий разработки</h3>
+              <p class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</p>
             </div>
           </div>
           <div class="how__history-el how__history-el_3">
@@ -995,8 +995,8 @@
               </svg>
             </div>
             <div class="how__history-content">
-              <div class="how__history-title">Подключение модулей</div>
-              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+              <h3 class="how__history-title">Подключение модулей</h3>
+              <p class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</p>
             </div>
           </div>
           <div class="how__history-el how__history-el_4">
@@ -1007,8 +1007,8 @@
               </svg>
             </div>
             <div class="how__history-content">
-              <div class="how__history-title">Тестирование</div>
-              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+              <h3 class="how__history-title">Тестирование</h3>
+              <p class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</p>
             </div>
           </div>
           <div class="how__history-el how__history-el_5">
@@ -1019,8 +1019,8 @@
               </svg>
             </div>
             <div class="how__history-content">
-              <div class="how__history-title">Публикация бота на странице Facebook</div>
-              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+              <h3 class="how__history-title">Публикация бота на странице Facebook</h3>
+              <p class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</p>
             </div>
           </div>
           <div class="how__history-el how__history-el_6">
@@ -1031,8 +1031,8 @@
               </svg>
             </div>
             <div class="how__history-content">
-              <div class="how__history-title">Профит</div>
-              <div class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</div>
+              <h3 class="how__history-title">Профит</h3>
+              <p class="how__history-text">Определение направлений и функций, где бот будет полезен для ваших клиентов.</p>
             </div>
           </div>
         </div>
@@ -1041,7 +1041,7 @@
       <section class="loc" id="loc" data-scroll-section="data-scroll-section">
         <div data-line></div>
         <div class="loc__container container">
-          <div class="loc__title">Где это работает</div>
+          <h2 class="loc__title">Где это работает</h2>
           <div class="loc__slider-wrap">
             <div class="loc__slider-counter">
               <div class="loc__slider-counter-current"></div>
@@ -1064,8 +1064,8 @@
               <div class="loc__slider-item">
                 <div class="loc__slider-row">
                   <div class="loc__slider-left">
-                    <div class="loc__slider-title">Новостные агенства</div>
-                    <div class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу. Боты отправляют текстовый, графический и видео контент. Возможно получение новостей от подписчиков.</div>
+                    <h3 class="loc__slider-title">Новостные агенства</h3>
+                    <p class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу. Боты отправляют текстовый, графический и видео контент. Возможно получение новостей от подписчиков.</p>
                   </div>
                   <div class="loc__slider-right">
                     <div class="loc__slider-image">
@@ -1080,8 +1080,8 @@
               <div class="loc__slider-item">
                 <div class="loc__slider-row">
                   <div class="loc__slider-left">
-                    <div class="loc__slider-title">Новостные агенства и популярные агенства</div>
-                    <div class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов.</div>
+                    <h3 class="loc__slider-title">Новостные агенства и популярные агенства</h3>
+                    <p class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов.</p>
                   </div>
                   <div class="loc__slider-right">
                     <div class="loc__slider-image">
@@ -1096,8 +1096,8 @@
               <div class="loc__slider-item">
                 <div class="loc__slider-row">
                   <div class="loc__slider-left">
-                    <div class="loc__slider-title">Новостные агенства будущего</div>
-                    <div class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.</div>
+                    <h3 class="loc__slider-title">Новостные агенства будущего</h3>
+                    <p class="loc__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.</p>
                   </div>
                   <div class="loc__slider-right">
                     <div class="loc__slider-image">
@@ -1116,7 +1116,7 @@
       <section class="advantage" id="advantage" data-scroll-section="data-scroll-section">
         <div data-line></div>
         <div class="advantage__container container">
-          <div class="advantage__title">Наши приемущества</div>
+          <h2 class="advantage__title">Наши приемущества</h2>
           <div class="advantage__list-counter">
             <div class="advantage__list-counter-current"></div>
             <div class="advantage__list-counter-total"></div>
@@ -1130,10 +1130,10 @@
                   </svg>
                 </div>
                 <div class="advantage__list-item-right">
-                  <div class="advantage__list-item-title">Целевой контент в коммуникациях</div>
+                  <h3 class="advantage__list-item-title">Целевой контент в коммуникациях</h3>
                 </div>
               </div>
-              <div class="advantage__list-item-text">Подключение внешней информационной системы или базы знаний о продукте/услуге.</div>
+              <p class="advantage__list-item-text">Подключение внешней информационной системы или базы знаний о продукте/услуге.</p>
             </div>
             <div class="advantage__list-item">
               <div class="advantage__list-item-row">
@@ -1143,10 +1143,10 @@
                   </svg>
                 </div>
                 <div class="advantage__list-item-right">
-                  <div class="advantage__list-item-title">Мультимедийный контент</div>
+                  <h3 class="advantage__list-item-title">Мультимедийный контент</h3>
                 </div>
               </div>
-              <div class="advantage__list-item-text">Отправка фото и видео контента, местоположения.</div>
+              <p class="advantage__list-item-text">Отправка фото и видео контента, местоположения.</p>
             </div>
             <div class="advantage__list-item">
               <div class="advantage__list-item-row">
@@ -1156,10 +1156,10 @@
                   </svg>
                 </div>
                 <div class="advantage__list-item-right">
-                  <div class="advantage__list-item-title">Статистика коммуникаций</div>
+                  <h3 class="advantage__list-item-title">Статистика коммуникаций</h3>
                 </div>
               </div>
-              <div class="advantage__list-item-text">Различная статистика позволит правильно спозиционировать ваш продукт.</div>
+              <p class="advantage__list-item-text">Различная статистика позволит правильно спозиционировать ваш продукт.</p>
             </div>
             <div class="advantage__list-item">
               <div class="advantage__list-item-row">
@@ -1169,10 +1169,10 @@
                   </svg>
                 </div>
                 <div class="advantage__list-item-right">
-                  <div class="advantage__list-item-title">Программируемые сценарии бота</div>
+                  <h3 class="advantage__list-item-title">Программируемые сценарии бота</h3>
                 </div>
               </div>
-              <div class="advantage__list-item-text">Произвольные сценарии и ветвления диалога в зависимости от контекста.</div>
+              <p class="advantage__list-item-text">Произвольные сценарии и ветвления диалога в зависимости от контекста.</p>
             </div>
             <div class="advantage__list-item">
               <div class="advantage__list-item-row">
@@ -1182,10 +1182,10 @@
                   </svg>
                 </div>
                 <div class="advantage__list-item-right">
-                  <div class="advantage__list-item-title">Оплата товаров или услуг</div>
+                  <h3 class="advantage__list-item-title">Оплата товаров или услуг</h3>
                 </div>
               </div>
-              <div class="advantage__list-item-text">Возможно подключить любую платежную систему и выписывать счета.</div>
+              <p class="advantage__list-item-text">Возможно подключить любую платежную систему и выписывать счета.</p>
             </div>
             <div class="advantage__list-item">
               <div class="advantage__list-item-row">
@@ -1195,10 +1195,10 @@
                   </svg>
                 </div>
                 <div class="advantage__list-item-right">
-                  <div class="advantage__list-item-title">Искусственный интеллект</div>
+                  <h3 class="advantage__list-item-title">Искусственный интеллект</h3>
                 </div>
               </div>
-              <div class="advantage__list-item-text">Разумное поведение бота, почти как человек.</div>
+              <p class="advantage__list-item-text">Разумное поведение бота, почти как человек.</p>
             </div>
           </div>
         </div>
@@ -1206,7 +1206,7 @@
       <section class="example" id="example" data-scroll-section="data-scroll-section">
         <div data-line></div>
         <div class="example__container container">
-          <div class="example__title">Примеры работ</div>
+          <h2 class="example__title">Примеры работ</h2>
           <div class="example__slider-wrap">
             <div class="example__slider-counter">
               <div class="example__slider-counter-current"></div>
@@ -1226,7 +1226,7 @@
               </a>
             </div>
             <div class="example__slider-chat">
-              <a class="example__slider-chat-text" href="#!" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+              <p class="example__slider-chat-text" href="#!" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</p>
               <a class="example__slider-chat-icon" href="#!">
                 <svg class="icon icon-telegram">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
@@ -1251,7 +1251,7 @@
                     </div>
                   </div>
                   <div class="example__slider-right">
-                    <div class="example__slider-title">Киевский зоопарк</div>
+                    <h3 class="example__slider-title">Киевский зоопарк</h3>
                     <div class="example__slider-text">
                       <p>
                         <strong>Задача:</strong> В связи с большим количеством простых запросов от клиентов, нужно было снизить нагрузку на колл центр заведения и упростить пользователю комуникацию по интересующим его вопросам.</p>
@@ -1273,8 +1273,8 @@
                     </div>
                   </div>
                   <div class="example__slider-right">
-                    <div class="example__slider-title">Новостные агенства и популярные агенства</div>
-                    <div class="example__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов.</div>
+                    <h3 class="example__slider-title">Новостные агенства и популярные агенства</h3>
+                    <p class="example__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов.</p>
                   </div>
                 </div>
               </div>
@@ -1290,8 +1290,8 @@
                     </div>
                   </div>
                   <div class="example__slider-right">
-                    <div class="example__slider-title">Новостные агенства будущего</div>
-                    <div class="example__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.</div>
+                    <h3 class="example__slider-title">Новостные агенства будущего</h3>
+                    <p class="example__slider-text">CNN, Forbes, TechCrunch имеют своих чат-ботов. Возможные сценарии: отправка новостей, подписка на новости, поиск новости по тегу.</p>
                   </div>
                 </div>
               </div>
@@ -1302,7 +1302,7 @@
       <section class="top" id="top" data-scroll-section="data-scroll-section">
         <div data-line></div>
         <div class="top__container container">
-          <div class="top__title" data-text-mobile="Статьи о ботах">Интересные статьи о ботах</div>
+          <h2 class="top__title" data-text-mobile="Статьи о ботах">Интересные статьи о ботах</h2>
           <div class="top__list-counter">
             <div class="top__list-counter-current"></div>
             <div class="top__list-counter-total"></div>
