--- a/www/index.html
+++ b/www/index.html
@@ -123,7 +123,8 @@
   </style>
   <script>
     var pager = [
-      ['home.html', '01', 'Home', 'Home page']
+      ['home.html', '01', 'Home', 'Home page'],
+      ['404.html', '02', '404', '404 page']
     ];
   </script>
   <header>
@@ -132,14 +133,14 @@
         <polygon points="33.2,209.7 0,209.7 7.8,239.8 40.5,239.8 	" />
         <rect x="148.9" y="209.7" width="33.7" height="175.9" />
         <polygon points="300.6,314 300.2,314 253.4,209.7 216.6,209.7 216.6,385.6 247.3,385.6 247.3,272.1 247.8,272.1 299.3,385.6
-            331.4,385.6 331.4,209.7 300.6,209.7 	" />
+						331.4,385.6 331.4,209.7 300.6,209.7 	" />
         <polygon points="465.4,209.7 353.3,209.7 353.3,239.4 392.6,239.4 392.6,385.6 426.1,385.6 426.1,239.4 465.4,239.4 	" />
         <path d="M508.1,209.7l-43.6,175.9h32.4l9.4-37h46.5l8.5,37h32.1l-42.3-175.9H508.1z M512.5,318.9l16.6-71.1h0.5l16.3,71.1H512.5z" />
         <path d="M664.5,237c12.2,0,20.4,7.3,20.4,30h33.7c-1.2-39.9-19.6-59.7-54.1-59.7c-32.6,0-55.6,15.5-55.6,58.9v62.9
-            c0,43.4,22.8,58.9,55.6,58.9c12.6,0,22.4-6.9,31.4-17.1l5.2,14.6h17.5v-90.2h-57.3v27.7h23.6v10.7c0,15.1-7.8,24.4-20.4,24.4
-            c-13.4,0-21.9-5.3-21.9-24.8v-71.6C642.5,242.3,651.1,237,664.5,237z" />
+						c0,43.4,22.8,58.9,55.6,58.9c12.6,0,22.4-6.9,31.4-17.1l5.2,14.6h17.5v-90.2h-57.3v27.7h23.6v10.7c0,15.1-7.8,24.4-20.4,24.4
+						c-13.4,0-21.9-5.3-21.9-24.8v-71.6C642.5,242.3,651.1,237,664.5,237z" />
         <polygon points="781,355.9 781,309.6 825.6,309.6 825.6,279.9 781,279.9 781,239.4 839.5,239.4 839.5,209.7 747.3,209.7
-            747.3,385.6 841.9,385.6 841.9,355.9 	" />
+						747.3,385.6 841.9,385.6 841.9,355.9 	" />
         <polygon points="96.3,209.7 51.3,385.6 83.3,385.6 128.2,209.7 	" /> </g>
     </svg>
   </header>
