PROD (home fix)

--- a/www/404.html
+++ b/www/404.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 page</title>
-    <link href="static/css/index.css" rel="stylesheet">
+    <link href="static/css/index.min.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
   <body>
@@ -679,6 +679,7 @@
       <div class="header__container container">
         <a class="header__logo" href="home.html">
           <img class="header__logo-img" src="static/img/logo.svg" alt="image" title="" />
+          <img class="header__logo-img" src="static/img/logo-dark.svg" alt="image" title="" />
         </a>
         <div class="header__right">
           <nav class="header__nav">
@@ -698,9 +699,7 @@
               <li>
                 <a href="#example">Кейсы</a>
               </li>
-              <li>
-                <a href="home.html">Блог</a>
-              </li>
+              <!--li: a(href='home.html') Блог-->
               <li>
                 <a href="home.html">Контакты</a>
               </li>
@@ -734,7 +733,7 @@
             </svg>
           </div>
           <div class="header__mobile-chat-btn">
-            <a href="#!">ЧАТ С БОТОМ</a>
+            <a href="#!" target="_blank">ЧАТ С БОТОМ</a>
           </div>
         </div>
       </div>
@@ -765,6 +764,6 @@
     </main>
     <!-- Footer-->
     <!-- Scripts-->
-    <script src="static/js/index.js"></script>
+    <script src="static/js/index.min.js"></script>
   </body>
 </html>
