--- a/www/index.html
+++ b/www/index.html
@@ -124,7 +124,8 @@
   <script>
     var pager = [
       ['home.html', '01', 'Home', 'Home page'],
-      ['404.html', '02', '404', '404 page']
+      ['404.html', '02', '404', '404 page'],
+      ['contacts.html', '02', 'Contacts', 'Contacts page']
     ];
   </script>
   <header>
