PROD (footer links, popup remove scrollbar)

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -822,13 +822,14 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-mobile-top"></use>
         </svg>
       </div>
-      <!--+e.round-top.
-	<svg viewBox="0 0 1282 81">
-	<path d="M0,81h641.4C320.9,81,0,0,0,0V81z"/>
-	<path d="M1282,0c0,0-319.6,81-639.6,81H1282v-81H1282z"/>
-	</svg>
--->
+      <div class="footer__round-contacts-top">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 76.6">
+          <path d="M0,0c0,0,391.7,76.6,789.7,76.6c248,0,490.3-66.6,490.3-66.6V0H0z" /> </svg>
+      </div>
       <div class="footer__callback">
+        <div class="footer__callback-logo">
+          <img src="static/img/logo-footer.png" alt="image">
+        </div>
         <div class="footer__callback-container container container_md">
           <h3 class="footer__callback-title">Обратная связь</h3>
           <form class="form form_contacts footer__callback-form" action="#">
