--- a/www/home.html
+++ b/www/home.html
@@ -1370,22 +1370,23 @@
             <nav class="footer__bot-nav">
               <ul>
                 <li>
-                  <a href="#!">Преимущества</a>
+                  <a href="#advantage">Преимущества</a>
                 </li>
                 <li>
-                  <a href="#!">Как это работает</a>
+                  <a href="#how">Как это работает</a>
                 </li>
                 <li>
-                  <a href="#!">Сферы деятельности</a>
+                  <a href="#loc">Сферы деятельности</a>
                 </li>
                 <li>
-                  <a href="#!">Как создаем</a>
+                  <a href="#how">Как создаем</a>
                 </li>
                 <li>
-                  <a href="#!">Кейсы</a>
+                  <a href="#example">Кейсы</a>
                 </li>
+                <!--li: a(href='home.html') Блог-->
                 <li>
-                  <a href="#!">Контакты</a>
+                  <a href="home.html">Контакты</a>
                 </li>
               </ul>
             </nav>
