--- a/www/home.html
+++ b/www/home.html
@@ -705,7 +705,7 @@
               </li>
             </ul>
           </nav>
-          <a class="header__chat" href="#!">
+          <a class="header__chat" href="#!" target="_blank">
             <span class="header__chat-icon">
               <svg class="icon icon-facebook">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
@@ -733,7 +733,7 @@
             </svg>
           </div>
           <div class="header__mobile-chat-btn">
-            <a href="#!" target="_blank">ЧАТ С БОТОМ</a>
+            <a href="#!">ЧАТ С БОТОМ</a>
           </div>
         </div>
       </div>
