PROD (fix chatBot)

--- a/www/404.html
+++ b/www/404.html
@@ -743,6 +743,7 @@
       <div class="b-404">
         <div class="b-404__bg">
           <img src="static/img/content/bg-404.jpg" alt="image">
+          <img src="static/img/content/bg-404-portrait.jpg" alt="image">
         </div>
         <div class="b-404__content">
           <p class="b-404__content-text">Не ошибается только тот, кто спит.</p>
