--- a/www/contacts.html
+++ b/www/contacts.html
@@ -810,7 +810,11 @@
                 </div>
               </div>
             </div>
-            <div class="contacts__col contacts__col_right"></div>
+            <div class="contacts__col contacts__col_right">
+              <div class="contacts__map-wrap">
+                <div class="contacts__map" data-map-center="50.471035, 30.517021" data-marker-path="static/img/map-marker.svg"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -908,6 +912,7 @@
       </div>
     </footer>
     <!-- Scripts-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk6mzEzumjkj6ppV83VxGuI5gbM-csMHc"></script>
     <script src="static/js/index.min.js"></script>
   </body>
 </html>
