--- a/www/home.html
+++ b/www/home.html
@@ -1298,6 +1298,9 @@
     <!-- Footer-->
     <footer class="footer" id="footer" data-scroll-section="data-scroll-section">
       <div data-line></div>
+      <div class="footer__map-image">
+        <img src="static/img/footer-map.png" alt="image">
+      </div>
       <div class="footer__mobile-top js-to-top">
         <svg class="icon icon-mobile-top">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-mobile-top"></use>
