PROD (fix bugs, new buttons)

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -812,6 +812,16 @@
             </div>
             <div class="contacts__col contacts__col_right">
               <div class="contacts__map-wrap">
+                <div class="contacts__map-mask">
+                  <div class="contacts__map-mask-jelly">
+                    <img src="static/img/map-jelly.svg" alt="image">
+                  </div>
+                  <div class="contacts__map-mask-mouse">
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewbox="0 0 598.8 438.1">
+                      <path fill="transparent" d="M0,0v438.1h598.8V0H0z M518.3,327.8c-83.7,71.6-304.1,139.4-417.4,29.8s-73-193.6,9.5-246.2c82.5-52.6,241.7-142.7,354.1-45S602,256.2,518.3,327.8z"></path>
+                    </svg>
+                  </div>
+                </div>
                 <div class="contacts__map" data-map-center="50.471035, 30.517021" data-marker-path="static/img/map-marker.svg"></div>
               </div>
             </div>
@@ -863,12 +873,16 @@
               <button class="btn btn_default form__submit" type="submit">
                 <div class="btn__text">Отправить</div>
                 <div class="btn__bg">
-                  <svg class="btn__bg-1" viewbox="0 0 254 72" preserveAspectRatio="none">
-                    <path d="M36.000,0.000 L218.000,0.000 C237.882,0.000 254.000,16.118 254.000,36.000 L254.000,36.000 C254.000,55.882 237.882,72.000 218.000,72.000 L36.000,72.000 C16.118,72.000 0.000,55.882 0.000,36.000 L0.000,36.000 C0.000,16.118 16.118,0.000 36.000,0.000 Z"></path>
-                  </svg>
-                  <svg class="btn__bg-2" viewbox="0 0 254 82" preserveAspectRatio="none">
-                    <path d="M35.955,4.960 C51.683,1.770 81.250,-0.117 126.828,0.000 C172.385,0.117 203.634,1.246 218.000,5.000 C237.451,10.083 254.000,21.118 254.000,41.000 L254.000,41.000 C254.000,60.882 234.461,73.068 218.000,77.000 C204.753,80.164 172.621,82.000 127.181,82.000 C81.621,82.000 48.763,80.008 36.000,77.000 C22.578,73.837 0.000,60.882 0.000,41.000 L0.000,41.000 C0.000,21.118 19.644,8.269 35.955,4.960 Z"></path>
-                  </svg>
+                  <div class="btn__bg-left">
+                    <div class="btn__bg-left-dot"></div>
+                    <div class="btn__bg-left-dot"></div>
+                    <div class="btn__bg-left-dot"></div>
+                  </div>
+                  <div class="btn__bg-right">
+                    <div class="btn__bg-right-dot"></div>
+                    <div class="btn__bg-right-dot"></div>
+                    <div class="btn__bg-right-dot"></div>
+                  </div>
                 </div>
               </button>
             </div>
