--- a/www/home.html
+++ b/www/home.html
@@ -1235,19 +1235,6 @@
                 </div>
               </a>
             </div>
-            <div class="example__slider-chat">
-              <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
-              <a class="example__slider-chat-icon" href="#!" target="_blank">
-                <svg class="icon icon-telegram">
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
-                </svg>
-              </a>
-              <a class="example__slider-chat-icon" href="#!" target="_blank">
-                <svg class="icon icon-facebook">
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
-                </svg>
-              </a>
-            </div>
             <div class="example__slider">
               <div class="example__slider-item">
                 <div class="example__slider-row">
@@ -1258,6 +1245,19 @@
                         <path d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z"></path>
                         <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
                       </svg>
+                    </div>
+                    <div class="example__slider-chat">
+                      <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+                      <a class="example__slider-chat-icon" href="#!" target="_blank">
+                        <svg class="icon icon-telegram">
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
+                        </svg>
+                      </a>
+                      <a class="example__slider-chat-icon" href="#!" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </div>
                   </div>
                   <div class="example__slider-right">
@@ -1281,6 +1281,19 @@
                         <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
                       </svg>
                     </div>
+                    <div class="example__slider-chat">
+                      <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+                      <a class="example__slider-chat-icon" href="#!" target="_blank">
+                        <svg class="icon icon-telegram">
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
+                        </svg>
+                      </a>
+                      <a class="example__slider-chat-icon" href="#!" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+                        </svg>
+                      </a>
+                    </div>
                   </div>
                   <div class="example__slider-right">
                     <h3 class="example__slider-title">Новостные агенства и популярные агенства</h3>
@@ -1297,6 +1310,19 @@
                         <path d="M393,179.6v5.2C393,183.1,393,181.3,393,179.6z"></path>
                         <path d="M333.6,340c-39.4,28.4-144.5,51.2-246,15C-17.4,317.5-13,184.3,23.3,120.5C59.7,56.3,50.1,0.2,113.6,0c63.8-0.2,87.8,16.4,186.5,8.9c57.2-4.3,92.4,82.6,93,170.7V0H0v373.7h393V184.8C392.7,247.9,374.3,310.7,333.6,340z"></path>
                       </svg>
+                    </div>
+                    <div class="example__slider-chat">
+                      <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+                      <a class="example__slider-chat-icon" href="#!" target="_blank">
+                        <svg class="icon icon-telegram">
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
+                        </svg>
+                      </a>
+                      <a class="example__slider-chat-icon" href="#!" target="_blank">
+                        <svg class="icon icon-facebook">
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-facebook"></use>
+                        </svg>
+                      </a>
                     </div>
                   </div>
                   <div class="example__slider-right">
@@ -1467,6 +1493,9 @@
               </button>
             </div>
           </form>
+        </div>
+        <div class="content-show js-modal-ty">
+          <p>Спасибо!</p>
         </div>
       </div>
     </div>
