PROD ( modal success improved )

--- a/www/home.html
+++ b/www/home.html
@@ -1494,7 +1494,7 @@
             </div>
           </form>
         </div>
-        <div class="content-show js-modal-ty">
+        <div class="content-show">
           <p>Спасибо!</p>
         </div>
       </div>
