PROD (fix fix fix)

--- a/www/contacts.html
+++ b/www/contacts.html
@@ -414,49 +414,56 @@
         <div class="footer__callback-logo">
           <img src="static/img/logo-footer.png" alt="image">
         </div>
-        <div class="footer__callback-container container container_md">
-          <h3 class="footer__callback-title">Обратная связь</h3>
-          <form class="form form_contacts footer__callback-form" action="#">
-            <div class="form__row form__row_half">
-              <div class="form__row">
-                <div class="form__row form__row_item has-error">
-                  <input class="form__input form__input_text" type="text" placeholder="Имя" />
-                  <div class="help-block">Ошибочка однако</div>
-                </div>
-                <div class="form__row form__row_item">
-                  <input class="form__input form__input_text" type="tel" placeholder="Телефон" />
-                  <div class="help-block">Ошибочка однако</div>
-                </div>
-                <div class="form__row form__row_item">
-                  <input class="form__input form__input_text" type="email" placeholder="E-mail" />
-                  <div class="help-block">Ошибочка однако</div>
-                </div>
-              </div>
-              <div class="form__row">
-                <div class="form__row form__row_item form__row_full-height">
-                  <textarea class="form__textarea" placeholder="Комментарий"></textarea>
-                  <div class="help-block">Ошибочка однако</div>
-                </div>
-              </div>
-            </div>
-            <div class="form__row form__row_simple">
-              <button class="btn btn_default form__submit" type="submit">
-                <div class="btn__text">Отправить</div>
-                <div class="btn__bg">
-                  <div class="btn__bg-left">
-                    <div class="btn__bg-left-dot"></div>
-                    <div class="btn__bg-left-dot"></div>
-                    <div class="btn__bg-left-dot"></div>
+        <div class="footer__callback-content">
+          <div class="footer__callback-container container container_md">
+            <h3 class="footer__callback-title">Обратная связь</h3>
+            <form class="form form_contacts footer__callback-form" action="#">
+              <div class="form__row form__row_half">
+                <div class="form__row">
+                  <div class="form__row form__row_item has-error">
+                    <input class="form__input form__input_text" type="text" placeholder="Имя" />
+                    <div class="help-block">Ошибочка однако</div>
                   </div>
-                  <div class="btn__bg-right">
-                    <div class="btn__bg-right-dot"></div>
-                    <div class="btn__bg-right-dot"></div>
-                    <div class="btn__bg-right-dot"></div>
+                  <div class="form__row form__row_item">
+                    <input class="form__input form__input_text" type="tel" placeholder="Телефон" />
+                    <div class="help-block">Ошибочка однако</div>
+                  </div>
+                  <div class="form__row form__row_item">
+                    <input class="form__input form__input_text" type="email" placeholder="E-mail" />
+                    <div class="help-block">Ошибочка однако</div>
                   </div>
                 </div>
-              </button>
-            </div>
-          </form>
+                <div class="form__row">
+                  <div class="form__row form__row_item form__row_full-height">
+                    <textarea class="form__textarea" placeholder="Комментарий"></textarea>
+                    <div class="help-block">Ошибочка однако</div>
+                  </div>
+                </div>
+              </div>
+              <div class="form__row form__row_simple">
+                <button class="btn btn_default form__submit" type="submit">
+                  <div class="btn__text">Отправить</div>
+                  <div class="btn__bg">
+                    <div class="btn__bg-left">
+                      <div class="btn__bg-left-dot"></div>
+                      <div class="btn__bg-left-dot"></div>
+                      <div class="btn__bg-left-dot"></div>
+                    </div>
+                    <div class="btn__bg-right">
+                      <div class="btn__bg-right-dot"></div>
+                      <div class="btn__bg-right-dot"></div>
+                      <div class="btn__bg-right-dot"></div>
+                    </div>
+                  </div>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="footer__callback-content-show">
+          <div class="footer__container container container_md">
+            <p>Спасибо!</p>
+          </div>
         </div>
       </div>
       <div class="footer__container container">
