PROD (fix fix fix)

--- a/www/home.html
+++ b/www/home.html
@@ -815,7 +815,7 @@
                       </svg>
                     </div>
                     <div class="example__slider-chat">
-                      <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+                      <p class="example__slider-chat-text" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</p>
                       <a class="example__slider-chat-icon" href="#!" target="_blank">
                         <svg class="icon icon-telegram">
                           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
@@ -850,7 +850,7 @@
                       </svg>
                     </div>
                     <div class="example__slider-chat">
-                      <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+                      <p class="example__slider-chat-text" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</p>
                       <a class="example__slider-chat-icon" href="#!" target="_blank">
                         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
                           <style type="text/css">
@@ -895,7 +895,7 @@
                       </svg>
                     </div>
                     <div class="example__slider-chat">
-                      <a class="example__slider-chat-text" href="#!" target="_blank" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</a>
+                      <p class="example__slider-chat-text" data-text-mobile="Поговорить с этим ботом">Поговорить с ботом</p>
                       <a class="example__slider-chat-icon" href="#!" target="_blank">
                         <svg class="icon icon-telegram">
                           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
