--- a/www/contacts.html
+++ b/www/contacts.html
@@ -237,6 +237,7 @@
       document.createElement('picture');
     </script>
     <!-- Preloader-->
+    <!--if homePage-->
     <div class="preloader">
       <div class="preloader__inner">
         <div class="preloader__logo">
