--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,8 @@
     var pager = [
       ['home.html', '01', 'Home', 'Home page'],
       ['404.html', '02', '404', '404 page'],
-      ['contacts.html', '02', 'Contacts', 'Contacts page']
+      ['contacts.html', '02', 'Contacts', 'Contacts page'],
+      ['blog.html', '02', 'Blog', 'Blog page']
     ];
   </script>
   <header>
